# lain-bootleg-bootleg-bootleg

./: .gitignore  CMakeLists.txt  README.md  index.d.ts  package.json
example/: loader.mjs  shell.html
example/react-example/: package-lock.json  package.json
example/react-example/public/: index.html
example/react-example/src/: App.css  App.js  index.css
scripts/: make_game_assets.py
src/: animations.c  dressup.c  dressup.h  engine.c  engine.h  extern-post-js.js  kumashoot.c  kumashoot.h  library.js  main.c  menu.c  menu.h  minigame.c  minigame.h  movie.c  movie.h  resources.c  resources.h  shader.c  sound.c  sound.h  sprite.c  sprite.h  state.c  state.h  text.c  text.h  texture.c  texture.h  theater.c  theater.h  window.c  window.h
